...
      route: 'student-chatbot',
    ),
  ];

  final List<_FeatureCardData> _connectManage = [
    const _FeatureCardData(
      title: 'Connect with a Counselor',
      image: 'https://bouve.northeastern.edu/wp-content/uploads/2023/05/what-do-mental-health-counselors-do-northeastern-graduate.webp',
      route: 'student-counselors',
    ),
    const _FeatureCardData(
      title: 'Appointments\n',
      image: 'https://3veta.com/wp-content/uploads/2021/11/66.-How-to-effectively-schedule-appointments.png',
...

  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      onTap: () => FocusScope.of(context).unfocus(),
      child: Scaffold(
        key: const Key('studentHomeScreen'),
        backgroundColor: const Color.fromARGB(255, 242, 241, 248),
        appBar: AppBar(
          backgroundColor: const Color.fromARGB(255, 242, 241, 248),
          elevation: 0,
          leading: Builder(
            builder: (context) => IconButton(
              key: const Key('drawer_button'),
              icon: const Icon(Icons.menu, color: Color(0xFF5D5D72)),
              onPressed: () => Scaffold.of(context).openDrawer(),
            ),
          ),
          title: Image.asset(
            'assets/icon/breathe-better-logo-fixed-1.png',
...
