...
    );
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('counselorHomeScreen'),
      backgroundColor: const Color.fromARGB(255, 242, 241, 248),
      appBar: AppBar(
        backgroundColor: const Color.fromARGB(255, 242, 241, 248),
        elevation: 0,
        leading: Builder(
          builder: (context) => IconButton(
...
        ),
        const SizedBox(height: 16),
        Row(
          children: [
            Expanded(
              child: _buildQuickActionCard(
                'All Appointments',
                Icons.calendar_today,
                Colors.blue,
                () {
                  Navigator.pushNamed(context, '/all-appointments');
                },
              ),
...
